# templatex

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: main.yml
src/: cli.rs  config.rs  errors.rs  filter.rs  lib.rs  logging.rs  main.rs  templating.rs
src/tui/: mod.rs  table_structs.rs  ui.rs
tectonic_files/: sample.toml
