[package]
name = "templatex"
version = "0.1.1"
edition = "2024"
description = "A powerful, easy to use template manager for LaTeX with Tectonic"
authors = ["JayanAXHF <sunil.chdry@gmail.com>"]
license = "Unlicense OR MIT"
homepage = "https://github.com/JayanAXHF/templatex"
repository = "https://github.com/JayanAXHF/templatex"
readme = "README.md"
keywords = ["utility", "template", "manager", "cli", "tui"]
categories = ["command-line-utilities", "command-line-interface", "template-engine"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
config = "0.15.19"
derive_builder = "0.20.2"
derive_more = { version = "2.1.0", features = ["display"] }
directories = "6.0.0"
getset = "0.1.6"
glob = "0.3.3"
inquire = "0.9.1"
rat-ftable = "1.3.0"
rat-salsa = "2.6.0"
rat-theme4 = "4.0.3"
rat-widget = "2.6.0"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
tera = "1.20.1"
thiserror = "2.0.17"
toml = { version = "0.9.8", features = ["fast_hash"] }
tracing = "0.1.43"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
walker = "1.0.1"

[patch.crates-io]
tera = {path = "./patches/tera/"}

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = "fat" # Enables Link-time Optimization.
opt-level = "z" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.
